--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "next-seo": "^6.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
