--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
+    "sharp": "^0.33.1",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
